Changes by libtimidity-0.2.0:
-----------------------------

* stream.c, api change: added mid_istream_seek and mid_istream_tell to
  the mid_istream_* api. added seek and tell funcs to the _MidIStream
  structure. mid_istream_open_callbacks() is changed now accepts these
  callbacks.

* MidSongOptions, api change: added an uint8 width member just after
  channels (not used yet, but serves as a padding at least.) added an
  uint16 reserved padding member just after buffer_size.

* malloc-safe: upon memory allocation failures, the library either does
  a mid_exit() to free all the allocated memory during init time, or a
  mid_song_free() to free the allocated memory during a song load time.

* the library can be compiled using a different memory allocator than
  malloc. (edit common.h for timi_malloc and timi_free)

* mid_init(), mid_init_no_config(): a mid_exit() is guaranteed upon
  config file parse failures or malloc() failures.

* mid_init(): the library doesn't care about common timidity.cfg system
  locations any more, callers of mid_init() are responsible for it. if
  the config file argument to mid_init() contains a parent directory,
  that will be added to timidity search path.

* mid_exit(): does a proper cleanup now and a reinitialization of the
  library doesn't crash.

* multiple resampling fixes. several timidity-0.2i fixes from the
  onicos.com site (http://www.onicos.com/staff/iz/timidity/dist/),
  as well as a few bits from timidity++. several fixes for memory
  errors reported by valgrind.

* mid_istream_skip(): accepts a long type length instead of size_t
  and returns success or failure now.

* options.h (DEFAULT_DRUMCHANNELS): do not mark 16 as a drum channel.

* read_midi_file(): added support for Microsoft RMID format.

* read_midi_file(): fixed parsing of certain MIDI files with extra
  data at the end of the tracks. (SDL_mixer bug:
  http://bugzilla.libsdl.org/show_bug.cgi?id=1299)
